  Oct 19, 2006 - BZ 224 - 2d long integrations were incorrect on 64 bit plats.
               - BZ 226 - Added support for attach and eof callouts to
		 event processors.
               - Documented new functions in the event processors.
  Oct 20,2006  - BZ 87 Added basic fitting... still some kinks to work out
                 in the Xamine display but it does work...also need
                 to Xamine drive Gui to create the fit.
  Oct 23, 2006 - Added documentation for the fit command and how to 
                 extend the fitting subsystem.
  Oct 24, 2006 - Fixed error in log display of fitlines (actually convert1d error).
                 Made fitlines solid lines not just dots.
                 Fixed defect introduced with fitlines - where 1-d objects
                 got deleted on updates.
                 Ensured that fitlines get sent in on sbind. 
                 Added framework for user processing of Xamine buttons in
                 the Xamine custom button box.
 Oct 25, 2006  - CXamineEvent::addButtonHandler needs to be public.
                 Expose ability to get the histogrammer etc. in SpecTcl.h
                 Expose fit id allocation in CfitCommand.
                 Added credits for gsl.{cpp,h} and permission grant to the
 November 1, 2006 - Fix some issues for building from the distro rather than
                 from CVS.
                 distribution
 Nov  2, 2006  - Get the calibrated parameter contrib install to stop polluting
                 $(prefix)/include with its headers.
               - Fix wierd issues with make dist on ubuntu edgy edge...
                 was not putting config dir into the distro.=======
                 distribution
 Nov 3, 2006   - Fix error introduced in scaler display by attempt to 
                 format totals as %u when they are actually floating point
                 exactly to keep them from overflowing.
               - Support a default buffersize preference.