@@ -553,3 +553,4 @@ SpecTcl 3.2-pre1 starts.
                  format totals as %u when they are actually floating point
                  exactly to keep them from overflowing.
                - Support a default buffersize preference.
+ Nov 8, 2006   - Add Xamine restart handler capability to Xamine interface.
